<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_billet">

    <fragment
        android:id="@+id/navigation_services"
        android:name="com.example.libsibsiu.ui.services.ServicesFragment"
        android:label="@string/title_services"
        tools:layout="@layout/fragment_services" />

    <fragment
        android:id="@+id/navigation_billet"
        android:name="com.example.libsibsiu.ui.billet.BilletFragment"
        android:label="@string/title_chit_billet"
        tools:layout="@layout/fragment_billet" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.libsibsiu.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />
</navigation>