<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/roboto"
        android:text="@string/sort_by_alphabet"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/textColor" />

    <RadioGroup
        android:id="@+id/radioGroupSort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radio_asc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/beginning_of_the_alphabet"
            android:textColor="@color/textColor" />

        <RadioButton
            android:id="@+id/radio_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/end_of_the_alphabet"
            android:textColor="@color/textColor" />
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/roboto"
        android:text="@string/period_writing_book"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/textColor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <EditText
            android:id="@+id/editTextDateFrom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:focusable="false"
            android:fontFamily="@font/roboto"
            android:hint="@string/from_the_date"
            android:textColor="@color/textColor"
            android:textColorHighlight="@color/textColorHightlight"
            android:textColorHint="@color/textColorHint"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/editTextDateTo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:focusable="false"
            android:fontFamily="@font/roboto"
            android:hint="@string/by_date"
            android:textColor="@color/textColor"
            android:textColorHighlight="@color/textColorHightlight"
            android:textColorHint="@color/textColorHint"
            tools:ignore="LabelFor" />
    </LinearLayout>

</LinearLayout>
