<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/password_title"
        android:textColor="@color/textColor"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="@+id/ed_password"
        app:layout_constraintTop_toBottomOf="@+id/ed_nomer_bilet" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="411dp"
        android:layout_height="165dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_sibsiu" />

    <EditText
        android:id="@+id/ed_nomer_bilet"
        android:layout_width="263dp"
        android:layout_height="55dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/hint_simvl"
        android:inputType="number"
        android:textColor="@color/textColor"
        android:textColorHighlight="@color/textColorHightlight"
        android:textColorHint="@color/textColorHint"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_bilet_title" />

    <EditText
        android:id="@+id/ed_password"
        android:layout_width="263dp"
        android:layout_height="55dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/hint_simvl"
        android:inputType="number|numberPassword"
        android:textColor="@color/textColor"
        android:textColorHighlight="@color/textColorHightlight"
        android:textColorHint="@color/textColorHint"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_title" />

    <TextView
        android:id="@+id/number_bilet_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/number_billet_title"
        android:textColor="@color/textColor"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="@+id/ed_nomer_bilet"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <TextView
        android:id="@+id/btn_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/btn_reg_Login"
        android:textColor="@color/textColor"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="175dp"
        android:layout_height="50dp"
        android:layout_marginTop="59dp"
        android:backgroundTint="@color/colorButton"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/btn_login"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_password" />

</androidx.constraintlayout.widget.ConstraintLayout>